force-app/main/default/objects/X7S_Files_Setting__mdt/X7S_Files_Setting__mdt.object-meta.xml
<CustomObject>
    <description>General settings for 7S Files accelerator from 7Summits.</description>
    <label>7S Files Setting</label>
    <pluralLabel>7S Files Settings</pluralLabel>
</CustomObject>