force-app/main/default/objects/X7S_Files_Setting__mdt/fields/Share_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Share_Access_Level__c</fullName>
    <description>Share object access level</description>
    <inlineHelpText>Share object access level</inlineHelpText>
    <label>Share Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>READ</fullName>
                <default>true</default>
                <label>READ</label>
            </value>
            <value>
                <fullName>EDIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>