force-app/main/default/objects/X7S_Files_Setting__mdt/fields/X7S_Files_Icon_Set__c.field-meta.xml
<CustomField>
    <fullName>X7S_Files_Icon_Set__c</fullName>
    <description>Icon Set</description>
    <inlineHelpText>Icon Set</inlineHelpText>
    <label>7S Files Icon Set</label>
    <referenceTo>X7S_Files_Icon_Set__mdt</referenceTo>
    <relationshipLabel>7S Files Settings</relationshipLabel>
    <relationshipName>X7S_Files_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>