force-app/main/default/objects/X7S_Files_Setting__mdt/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>X7S_Files_Criteria_Set__c</columns>
    <columns>X7S_Files_Icon_Set__c</columns>
    <columns>Share_Access_Level__c</columns>
    <columns>Batch_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>File Setting Detail</label>
</ListView>